# 2DFarmingRPG

./: .gitignore  Doxyfile  README.md
Stardew/: BuildDebianPkg.sh  BuildDebug.bat  BuildDebug.sh  BuildRelease.bat  BuildRelease.sh  Build_Internal.sh  CMakeLists.txt  CMakeUserPresets.json  LaunchGameClient.sh  LaunchGameServer.sh  MakeLatin.sh  OpenFarmer_0.0-0.deb  RunEngineNetTest.sh  compile_assets.bat  compile_assets.sh  debian_control.txt  jimlog.txt
Stardew/Assets/: Engine.tiled-session  GameHUD.lua  ImageFiles.json  Keymap.json  Settings.xml  settings.lua  ui_atlas.xml
Stardew/WfAssets/: Engine.tiled-session  Exterior Tiles.json  Farm.json  GameHUD.lua  GameHUD.xml  House.json  ImageFiles.json  Interior 2.json  Interior.json  Keymap.json  Outside Objects.json  RoadToTown.json  Settings.xml  Terrain and Outside.json  console.xml  debug_overlay.xml  items.json  pickaxe.tsj  settings.lua  test.xml  ui_atlas.xml
Stardew/WfAssets/Saves/: saves.txt
Stardew/atlastool/: main.c
Stardew/engine/: CMakeLists.txt
Stardew/engine/docs/: AssetTools.md  CommandLineArgs.md  Contributing.md  EngineCore.md  Entities.md  Game.md  GameFramework.md  Input.md  Networking.md  Rendering.md  Testing.md  UI.md
Stardew/engine/include/: Atlas.h  BinarySerializer.h  Camera2D.h  CanvasWidget.h  DataNode.h  DynArray.h  Entities.h  Entity2DCollection.h  EntityQuadTree.h  Game2DLayer.h  Game2DLayerNetwork.h  GameFramework.h  GameFrameworkEvent.h  InputContext.h  LatinMacros.h  Log.h  Network.h  NetworkClient.h  NetworkID.h  NetworkServer.h  ObjectPool.h  Physics2D.h  RawNetMessage.h  RootWidget.h  Scripting.h  (+12 more)
Stardew/enginenettest/: CMakeLists.txt  EngineNetTest.sh  NetworkSimConfig_BadNetwork.json  NetworkSimConfig_GoodNetwork.json  StartNettestClient.sh  StartNettestServer.sh  main.c
Stardew/enginetest/: CMakeLists.txt  GameFrameworkEventTests.cpp  SharedPtrTests.cpp
Stardew/game/: CMakeLists.txt  Game.md  make_release_version_header.py
(+113 files in other folders)
